# genesis

./: .gitignore  CONTEXT.md  README.md  desktop.ps1  mobile.ps1  pyproject.toml
PROMPTS/: HANDOFF_NOTES.txt  MASTER_PROMPT.txt
bundled_content/: manifest.json
desktop/: __init__.py
desktop/app/: __init__.py  app_shell.py  bundled_loader.py  config.py  logging_setup.py  main.py  runtime_paths.py  versioning.py
desktop/tests/: test_backup_and_diagnostics.py  test_bundle_export_service.py  test_bundled_loader.py  test_catalog_ingredient.py  test_config.py  test_database_migrations.py  test_desktop_window_smoke.py  test_domain_models.py  test_editor_service.py  test_editor_state.py  test_home_overview.py  test_link_resolution.py  test_links_timers_persistence.py  test_local_recipe_repository.py  test_meal_plan_grocery_service.py  test_media_service.py  test_migration_payload_to_normalized.py  test_normalized_schema.py  test_ordering_persistence.py  test_recipe_diff_service.py  test_recipe_search_discovery.py  test_recipe_share_service.py  test_recipe_user_state.py  test_refinement_phase.py  (+5 more)
docs/: 00_VISION.md  01_PRODUCT_REQUIREMENTS.md  02_ARCHITECTURE.md  03_DATA_MODEL.md  04_SYNC_PROTOCOL.md  05_UI_UX_GUIDELINES.md  06_LOGGING_AND_DIAGNOSTICS.md  07_CONTENT_PACKAGING.md  08_TEST_STRATEGY.md  09_ROADMAP.md  10_IDEA_BACKLOG.md
tools/: dev_sync_probe.py  diff_recipe.py  export_recipe_bundle.py  export_recipe_share.py  import_recipe_share.py  ops_desktop.py  release_readiness_report.py  seed_sample_data.py  validate_bundled_content.py  validate_schemas.py
(+146 files in other folders)
