[project]
name = "recipe-forge"
version = "0.1.0"
description = "Recipe Forge desktop/shared tooling monorepo foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "PySide6>=6.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = [
  "desktop/tests",
  "tests",
]

